# nomad

./: .gitignore  LICENSE  README.md  coding_agent_project_plan.md  nomad.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: 01-getting-started.md  02-how-a-coding-agent-works.md  03-architecture.md  04-code-tour.md  05-glossary.md  06-extending.md  07-exercises.md  README.md
src/nomad_agent/: __init__.py  cli.py  compression.py  config.py  conversation.py  logging_setup.py  loop.py  memory.py  orchestrator.py  permissions.py  planner.py  sandbox.py  tokens.py  toolcalls.py
src/nomad_agent/context/: __init__.py  assembler.py  embeddings.py  indexer.py  retrieval.py
src/nomad_agent/evals/: __init__.py  benchmark.py  tasks.json  verifier.py
src/nomad_agent/models/: __init__.py  base.py  mock.py  ollama.py  openai_compat.py
src/nomad_agent/prompts/: __init__.py  system.md
src/nomad_agent/tools/: __init__.py  base.py  files.py  gitops.py  search.py  shell.py  workspace.py
tests/: test_cli_e2e.py  test_compression.py  test_config.py  test_context.py  test_conversation.py  test_evals.py  test_loop.py  test_memory.py  test_model_agnosticism.py  test_models.py  test_orchestrator.py  test_permissions.py  test_planner.py  test_tools.py
