[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nomad-agent"
version = "0.1.0"
description = "A local-first coding agent built on free, self-hostable components"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
nomad = "nomad_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nomad_agent = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
